--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="keywords" content="SD credit, SD contract, leasing purpose, financing, leasing example">
     <title>SD Loans and Leasing - Frequently Asked Questions (Part 2)</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://prettygracia.github.io/loan-and-leasing2/">
+    <meta name="google-site-verification" content="vQmSYckz8pc7RaA1C71jtqMpoVBqF6KSmc3ANvqtJzc" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-229LRMEE5B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-229LRMEE5B');
+</script>
 </head>
 <body>
 
